--- a/public/json/projects.json
+++ b/public/json/projects.json
@@ -1,9 +1,21 @@
 [
   {
+    "id": 4,
+    "title": "Time to Relex App",
+    "url": "https://jigarmehta277.github.io/Time-to-Relax-app/",
+    "slug": "HTML CSS",
+    "image": "./images/timttoRelex.jpg",
+    "content": "Immersive ",
+    "type_id": 2,
+    "user_id": 1,
+    "created_at": "2023-04-19T02:10:11.000000Z",
+    "updated_at": "2023-04-19T02:11:17.000000Z"
+  },
+  {
     "id": 5,
     "title": "Assassin's Creed Merch",
     "url": "https://github.com/JigarMehta277/valorantApplication.git",
-    "slug": "jigarmehta",
+    "slug": "Node,Express,MngoDB",
     "image": "./images/ac.png",
     "content": "Passion project created in ASP.net",
     "type_id": 1,
@@ -14,10 +26,22 @@
   {
     "id": 6,
     "title": "PLU code generator",
-    "url": "#",
-    "slug": "plu",
+    "url": "",
+    "slug": "JAVASCRIPT,HTML,CSS",
     "image": "./images/PLU1.jpg",
-    "content": "This project described PLU project",
+    "content": "Supermarket PLU testing system",
+    "type_id": 2,
+    "user_id": 1,
+    "created_at": "2023-04-19T02:10:11.000000Z",
+    "updated_at": "2023-04-19T02:11:17.000000Z"
+  },
+  {
+    "id": 6,
+    "title": "Hospital Management System",
+    "url": "https://github.com/Harshpateloo7/HospitalManagementSystem",
+    "slug": "JAVASCRIPT,C#,HTML,CSS",
+    "image": "./images/hospital.png",
+    "content": "Detailed hospital management system",
     "type_id": 2,
     "user_id": 1,
     "created_at": "2023-04-19T02:10:11.000000Z",
